--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -24,16 +24,53 @@ textarea {
 .description {
   white-space: pre-wrap;
 }
-
-.time-block {
-  text-align: center;
-  border-radius: 15px;
+.container {
+  display: flex;
+  flex-direction: column;
+}
+.timeblock {
+  border: 0.5px solid grey;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 18px;
+  height: 100px;
+  width: 100%;
+}
+label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  flex-grow: 1;
+  height: 100%;
+  margin-bottom: 0;
 }
 
+/* .time-block {
+  text-align: center;
+  border-radius: 15px;
+} */
+/* 
 .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+} */
+.blockInput {
+  width: 80%;
+}
+.saveDiv {
+  display: flex;
+  flex-grow: 1;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-left: 2px solid grey;
+  background-color: #06aed5;
+  color: white;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .hour {
