--- a/style/style.css
+++ b/style/style.css
@@ -15,20 +15,21 @@ textarea {
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
-  color: black;
+  background-color: #06aed5;
+  color: white;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  box-shadow: 0px 0px 5px 5px black;
 }
 
 #jumboTime {
   position: absolute;
   padding: 8px;
-  top: 0px;
-  left: 0px;
-  border: dashed 1px black;
-  color: white;
-  background-color: black;
+  top: -3px;
+  left: -3px;
+  color: #06aed5;
+  background-color: white;
+  border-bottom-right-radius: 15px;
+  box-shadow: 3px 3px 3px 3px white, 3px 3px 3px 3px black;
 }
 .description {
   white-space: pre-wrap;
@@ -37,6 +38,31 @@ textarea {
   display: flex;
   flex-direction: column;
 }
+#storageNotifyCon {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+  height: 0px;
+}
+#storageNotify {
+  height: 55px;
+  padding: 10px;
+  border: 1px solid white;
+  text-align: center;
+  background-color: #06aed5;
+  color: white;
+  border-radius: 15px;
+  box-shadow: 1px 1px 10px #06aed5;
+  z-index: 1;
+}
+#spanLocalText {
+  margin-top: 5px;
+  background-color: white;
+  color: #06aed5;
+  border-radius: 15px;
+  height: 18px;
+}
+
 .timeblock {
   /* border: 0.5px solid grey; */
   display: flex;
@@ -56,16 +82,6 @@ label {
   margin-bottom: 0;
 }
 
-/* .time-block {
-  text-align: center;
-  border-radius: 15px;
-} */
-/* 
-.row {
-  white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;
-} */
 .blockInput {
   width: 80%;
   background-color: lightgray;
@@ -129,3 +145,7 @@ i {
   background-color: #06aed5;
   color: white;
 } */
+
+.hide {
+  display: none !important;
+}
