--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,11 @@
+/* body Css */
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
 
-textarea {
-  background: transparent;
-  border: none;
-  resize: none;
-  color: #000000;
-  border-left: 1px solid black;
-  padding: 10px;
-}
-
+/* Jumbotron CSS */
 .jumbotron {
   text-align: center;
   background-color: #06aed5;
@@ -20,7 +13,6 @@ textarea {
   border-radius: 0;
   box-shadow: 0px 0px 5px 5px black;
 }
-
 #jumboTime {
   position: absolute;
   padding: 8px;
@@ -31,13 +23,12 @@ textarea {
   border-bottom-right-radius: 15px;
   box-shadow: 3px 3px 3px 3px white, 3px 3px 3px 3px black;
 }
-.description {
-  white-space: pre-wrap;
-}
+/* Container CSS */
 .container {
   display: flex;
   flex-direction: column;
 }
+/* localStorageNotification Css */
 #storageNotifyCon {
   display: flex;
   justify-content: center;
@@ -63,8 +54,8 @@ textarea {
   height: 18px;
 }
 
+/* Timeblock Css */
 .timeblock {
-  /* border: 0.5px solid grey; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -81,12 +72,22 @@ label {
   height: 100%;
   margin-bottom: 0;
 }
+textarea {
+  background: transparent;
+  border: none;
+  resize: none;
+  color: #000000;
+  border-left: 1px solid black;
+  padding: 10px;
+}
 
 .blockInput {
   width: 80%;
   background-color: lightgray;
   border-top: 1px solid white;
 }
+
+/* SaveDiv Css */
 .saveDiv {
   display: flex;
   flex-grow: 1;
@@ -117,35 +118,22 @@ i {
   border-bottom-right-radius: 15px;
 }
 
+/* Timeblock hour css */
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
 }
-
+/* Timeblock color CSS */
 .past {
   background-color: #d3d3d3;
   color: white;
 }
-
 .present {
   background-color: #ff6961;
   color: white;
 }
-
 .future {
   background-color: #77dd77;
   color: white;
-}
-
-/* .saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06aed5;
-  color: white;
-} */
-
-.hide {
-  display: none !important;
 }
